fix mobile image alignment

--- a/themes/bootscore-child/theme_components/scss/_bootscore-custom.scss
+++ b/themes/bootscore-child/theme_components/scss/_bootscore-custom.scss
@@ -288,6 +288,39 @@ hr {
 }
 
 /*--------------------------------------------------------------
+# Image Alignments
+--------------------------------------------------------------*/
+
+.alignleft, .alignright, .aligncenter {
+    clear: both;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1.5em;
+  }
+  
+  @media (min-width: 768px) {
+    .alignleft {
+      /*rtl:ignore*/
+      float: left;
+    
+      /*rtl:ignore*/
+      margin-right: 1.5em;
+      margin-bottom: 1.5em;
+    }
+    
+    .alignright {
+      /*rtl:ignore*/
+      float: right;
+    
+      /*rtl:ignore*/
+      margin-left: 1.5em;
+      margin-bottom: 1.5em;
+    }
+  }
+  
+
+/*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
 
